--- a/Udacity-Arcade-Game-master/css/style.css
+++ b/Udacity-Arcade-Game-master/css/style.css
@@ -2,3 +2,6 @@ body {
     text-align: center;
 	background-image: url('../images/33.jpg');
 }
+h1, h2 {
+    font-family: 'Orbitron', sans-serif;
+}
